<resources>
    <string name="app_name">Fresh And Fast</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_shop">Shop</string>
    <string name="product_price">Price: $%1$.2f</string>
    <string name="product_quantity">Quantity: %d</string>
    <string name="product_item_left">Item Left: %1$d</string>
    <string name="navigation_order">Check Out</string>
    <string name="total_cost">Total cost: $%.2f</string>
    <string name="no_item_message">Can\'t find anything...</string>
    <string name="checkout">Checkout</string>
    <string name="buynow_with_total_price">Buy Now ($%.2f)</string>
    <string name="orderPageHeader">These are your orders:</string>
    <string name="orderListEmptyMessage">There is nothing in your shopping cart...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registerHeader">Join us!</string>
    <string name="registerFormSubmit">Register</string>
    <string name="loginFormSubmit">Login</string>
    <string name="loginFormGotoRegister">New? Register here.</string>
    <string name="loginHeader">Login</string>
    <string name="unknownError">Unknown Error</string>
    <string name="navigation_history">Your Orders</string>
    <string name="navigation_account">Account</string>
    <string name="orderDeliveryCharge">Delivery Charges: +$%.2f</string>
    <string name="orderDiscount">Discount Total: -$%.2f</string>

    <string-array name="settingsList">
        <item>Change Shipping Address</item>
        <item>Log out</item>
    </string-array>
</resources>