<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.premiumgrocery.freshandfast.LoginActivity" />
        <variable
            name="viewModel"
            type="com.premiumgrocery.freshandfast.ui.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32sp"
            android:text="@string/loginHeader"
            android:textSize="28sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:background="?colorPrimaryContainer"
            android:padding="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginFormEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="Enter email"
                android:minWidth="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.loginFormEmail}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginFormPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="Enter password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/loginFormEmail"
                app:layout_constraintStart_toStartOf="@+id/loginFormEmail"
                app:layout_constraintTop_toBottomOf="@+id/loginFormEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.loginFormPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginFormError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{viewModel.loginFormError}"
                android:textAlignment="center"
                android:textColor="?colorError"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginFormPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginFormSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:enabled="@{viewModel.loginFormCanSubmit}"
                android:onClick="@{() -> viewModel.onLogin()}"
                android:text="@string/loginFormSubmit"
                app:layout_constraintEnd_toEndOf="@+id/loginFormEmail"
                app:layout_constraintStart_toStartOf="@+id/loginFormEmail"
                app:layout_constraintTop_toBottomOf="@+id/loginFormError" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginFormGotoRegister"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="@{() -> activity.gotoRegister()}"
                android:text="@string/loginFormGotoRegister"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/loginFormEmail"
                app:layout_constraintStart_toStartOf="@+id/loginFormEmail"
                app:layout_constraintTop_toBottomOf="@+id/loginFormSubmit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>